style: mejora en responsive y site

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -95,7 +95,7 @@
     pointer-events: auto;
   }
 
-  /* About */
+  /* About (Sobre mí) */
   .about-content h1 {
     font-size: 2rem;
     margin-bottom: 25px;
